--- a/main.css
+++ b/main.css
@@ -193,7 +193,7 @@ video{
 .tv-main-container-image{
   width: 100%;
   width: 690px;
-  background-image: url('/img/main-img/tv.png');
+  background-image: url('img/main-img/tv.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -212,7 +212,7 @@ video{
 .watch-anywhere-main-container-image{
   width: 100%;
   width: 750px;
-  background-image: url('/img/main-img/device-pile.png');
+  background-image: url('img/main-img/device-pile.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
